<resources>
    <string name="app_name">TGMZ-Java</string>

    <string name="welcome_title">Welcome to TGMZ</string>
    <string name="welcome_subtitle">Please sign in to continue</string>
    <string name="id_or_email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="btn_login">Login</string>
    <string name="btn_guest">Continue as Guest</string>
    <string name="link_register">Don\'t have an account? Register here</string>

    <string name="register_title">Sign Up</string>
    <string name="israeli_id">ID</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date">Select Date</string>
    <string name="btn_register">SIGN UP</string>

    <string name="error_required">This field is required</string>
    <string name="error_invalid_id">Invalid Israeli ID.</string>
    <string name="error_invalid_name">Must be at least 2 characters.</string>
    <string name="error_invalid_email">Must be a Gmail or Walla address.</string>
    <string name="error_invalid_phone">Must start with 05 and contain 10 digits.</string>
    <string name="error_invalid_age">Must be at least 21 years old.</string>
    <string name="error_weak_password">8+ chars, uppercase, lowercase, number &amp; symbol.</string>

    <string name="title_spec_builder">Your PC Build</string>
    <string name="title_select_component">Select Component</string>
    <string name="estimated_total">Estimated Total:</string>
    <string name="default_price">₪0.00</string>
    <string name="empty_slot_text">Tap to select a component...</string>
    <string name="lock_title">Unlock the PC Builder</string>
    <string name="lock_subtitle">Create an account or log in to start saving your custom PC builds to the cloud.</string>
    <string name="btn_login_register">Log In / Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>